--- a/BeefSpace.toml
+++ b/BeefSpace.toml
@@ -1,5 +1,5 @@
 FileVersion = 1
-Projects = {OpenGL = {Path = "OpenGL"}, OpenGLTest = {Path = "OpenGLTest"}}
+Projects = {OpenGL = {Path = "OpenGL"}, OpenGLTest = {Path = "OpenGLTest"}, SDL2 = "*"}
 
 [Workspace]
 StartupProject = "OpenGLTest"
